--- a/RepoRapport/RepoRapport.WebMVC.csproj
+++ b/RepoRapport/RepoRapport.WebMVC.csproj
@@ -240,6 +240,9 @@
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Member\Index.cshtml" />
     <Content Include="Views\Job\Index.cshtml" />
+    <Content Include="Views\Report\Create.cshtml" />
+    <Content Include="Views\Member\Create.cshtml" />
+    <Content Include="Views\Job\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
