--- a/RepoRapport.Models/RepoRapport.Models.csproj
+++ b/RepoRapport.Models/RepoRapport.Models.csproj
@@ -43,11 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JobCreate.cs" />
+    <Compile Include="JobDetail.cs" />
+    <Compile Include="JobEdit.cs" />
     <Compile Include="JobListItem.cs" />
     <Compile Include="MemberCreate.cs" />
+    <Compile Include="MemberDetail.cs" />
+    <Compile Include="MemberEdit.cs" />
     <Compile Include="MemberListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportCreate.cs" />
+    <Compile Include="ReportDetail.cs" />
+    <Compile Include="ReportEdit.cs" />
     <Compile Include="ReportListItem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
