--- a/RepoRapport.Data/RepoRapport.Data.csproj
+++ b/RepoRapport.Data/RepoRapport.Data.csproj
@@ -57,6 +57,10 @@
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Job.cs" />
+    <Compile Include="Migrations\202105082343485_initCreate.cs" />
+    <Compile Include="Migrations\202105082343485_initCreate.Designer.cs">
+      <DependentUpon>202105082343485_initCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
@@ -65,6 +69,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202105082343485_initCreate.resx">
+      <DependentUpon>202105082343485_initCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
